--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ opencv_contrib_python==4.7.0.72
 opencv_python==4.8.0.74
 streamlit==1.24.0
 tensorflow==2.7.0
-libgl1-mesa-glx
+freeglut3-dev
+libgtk2.0-dev
